# surveillance_sys

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  package.xml
.cache/clangd/index/: camera_node.cpp.E660C623B6B24627.idx  mock_frames.hpp.8D270AC319B713E2.idx  motion_detector_node.cpp.7EFA53C2BEFB1292.idx
config/: system_params.yaml
include/surveillance_system/: captureNode.hpp  mock_frames.hpp
launch/: simulation.launch  system.launch
msg/: MotionEvent.msg  camera_status.msg  diagnostic_event.msg  motion_detection_events_array.msg  motion_event.msg  pipeline_metrics.msg  storage_status.msg
scripts/: yolo_node.py
src/: CMakeLists.txt
src/components/: CMakeLists.txt
src/components/Harrier36X/: CMakeLists.txt
src/components/SerialComms/: Serial.hpp
src/components/utilities/: CMakeLists.txt
src/components/utilities/SerialComms/: CMakeLists.txt  Serial.cpp  Serial.hpp
src/components/utilities/ThreadSafeQueue/: ThreadSafeQueue.hpp
src/nodes/: camera_node.cpp  capture_manager_node.cpp  motion_detector_node.cpp
src/nodes/cameraNode/: cameraNode.cpp  cameraNode.hpp  main.cpp
src/nodes/captureNode/: captureNode.cpp  captureNode.hpp  main.cpp
src/nodes/diagnosticsNode/: diagnosticsNode.cpp  diagnosticsNode.hpp  main.cpp
src/nodes/motionDetectionNode/: main.cpp  motionDetectionNode.cpp  motionDetectionNode.hpp  motionDetectionNode_trt.cpp  motionDetectionNode_trt.hpp
src/nodes/motionTrackingNode/: main.cpp  motionTrackingNode.cpp  motionTrackingNode.hpp
src/simulation/: mock_frames.hpp
src/testExecutables/: CMakeLists.txt
src/testExecutables/Harrier36X/harrierBringup/: main.cpp
src/testExecutables/Harrier36X/harrierV4L2/harrierBringup/: HarrierCommsUSB.h  HarrierHandler.cpp  HarrierHandler.hpp  HarrierVisca.h  V4L2Device.hpp  main.cpp
src/testExecutables/Harrier36X/harrierv4l2Bringup/: HarrierVisca.h  main.cpp
surveillance_system/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
surveillance_system/config/: system_params.yaml
surveillance_system/dsconfig/: config_infer_primary_yoloV8.txt  deepstream_app_config.txt  labels.txt
surveillance_system/launch/: simulation.launch  system.launch
surveillance_system_camera/: CMakeLists.txt  package.xml
surveillance_system_camera/include/surveillance_system_camera/: cameraNode.hpp  mock_frames.hpp
surveillance_system_camera/src/: cameraNode.cpp  main.cpp
surveillance_system_capture/: CMakeLists.txt  package.xml
surveillance_system_capture/include/surveillance_system_capture/: captureNode.hpp
surveillance_system_capture/include/surveillance_system_capture/components/: captureNodeInternal.hpp
surveillance_system_capture/src/: captureNode.cpp  captureNode.hpp  main.cpp
surveillance_system_capture/src/components/: captureNodeInternal.cpp  captureNodeInternal.hpp
surveillance_system_common/: CMakeLists.txt  package.xml
surveillance_system_common/include/surveillance_system_common/DeepSORT/: CMakeLists.txt
surveillance_system_common/include/surveillance_system_common/DeepSORT/incl/utilities/: munkres.hpp
surveillance_system_common/include/surveillance_system_common/DeepSORT/src/utilities/: munkres.cpp
surveillance_system_common/src/DeepSORT/: CMakeLists.txt
surveillance_system_common/src/DeepSORT/incl/: DeepSORT.hpp  Track.hpp  Tracker.hpp  featureTensor.hpp
surveillance_system_common/src/DeepSORT/incl/utilities/: linearAssignment.hpp  logging.hpp  matrix.hpp
surveillance_system_common/src/DeepSORT/src/: DeepSORT.cpp  Track.cpp  Tracker.cpp  featureTensor.cpp
surveillance_system_common/src/DeepSORT/src/utilities/: hungarianOpener.cpp  nnMatching.cpp
surveillance_system_common/src/ROS/: EventLoopTimeKeeper.hpp
surveillance_system_common/src/ThreadSafeQueue/: ThreadSafeQueue.hpp
surveillance_system_detection_deepstream/: CMakeLists.txt  package.xml
surveillance_system_detection_deepstream/cmake/: FindDeepstreamAppCommon.cmake  FindGStreamer.cmake  FindJsonGlib.cmake  FindNVDS.cmake  LibFindMacros.cmake
surveillance_system_detection_deepstream/src/: deepstream_app.c  deepstream_app.h  deepstream_app_config_parser_yaml.cpp  deepstream_app_main.c  detectorNode.cpp  detectorNode.hpp  main.cpp
surveillance_system_diagnostics/: CMakeLists.txt  package.xml
surveillance_system_diagnostics/src/: diagnosticsNode.cpp  diagnosticsNode.hpp  main.cpp
surveillance_system_motion_detection/: CMakeLists.txt  package.xml
surveillance_system_motion_detection/src/: main.cpp  motionDetectionNode_trt.cpp  motionDetectionNode_trt.hpp
surveillance_system_motion_tracking/: CMakeLists.txt  package.xml
surveillance_system_motion_tracking/src/: motionTrackingNode.cpp  motionTrackingNode.hpp
surveillance_system_motion_tracking/src/components/: FeatureExtractor.cpp  asyncTracking.hpp  motionTrackingInternal.hpp
surveillance_system_msgs/: CMakeLists.txt  package.xml
surveillance_system_param_manager/: CMakeLists.txt  package.xml
surveillance_system_pipeline/: CMakeLists.txt  package.xml
surveillance_system_pipeline/src/: pipelineNode.cpp  pipelineNode.hpp
surveillance_system_pipeline/src/components/: harrierCaptureSrc.cpp  harrierCaptureSrc.hpp  pipelineInitialDetectionLite.cpp  pipelineInitialDetectionLite.hpp  pipelineInternal.cpp  pipelineInternal.hpp
surveillance_system_pipeline/src/components/cuda/: cudaPreprocessor.cu  cudaPreprocessor.hpp  memoryPool.hpp
test/: test_pipeline.cpp
test/pipeline/: test_pipelineInternal.cpp  test_pipelineParameterLoading.cpp
test/utilities/: test_threadSafeQueue.cpp
valvesyteem_old/: .gitignore  CMakeLists.txt  FindTensorRT.cmake  package.xml
valvesyteem_old/config/: simulation_params.yaml
valvesyteem_old/launch/: simulation.launch
valvesyteem_old/msg/: storage_status.msg
valvesyteem_old/profiling/: system_setup.py
valvesyteem_old/scripts/: export_model.py  yolo_node.py
valvesyteem_old/src/components/Harrier36X/: CMakeLists.txt
valvesyteem_old/src/components/Harrier36X/VISCA/: ViscaProtocol.cpp
valvesyteem_old/src/testExecutables/: CMakeLists.txt
(+62 files in other folders)
