<?xml version="1.0"?>
<package format="2">
  <name>surveillance_system</name>
  <version>0.1.0</version>
  <description>Meta-package for the Surveillance System</description>
  <maintainer email="kmj@taltech.ee">kmj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>surveillance_system_msgs</exec_depend>
  <exec_depend>surveillance_system_common</exec_depend>
  <exec_depend>surveillance_system_camera</exec_depend>
  <exec_depend>surveillance_system_capture</exec_depend>
  <exec_depend>surveillance_system_diagnostics</exec_depend>
  <exec_depend>surveillance_system_motion_detection</exec_depend>
  <exec_depend>surveillance_system_motion_tracking</exec_depend>
  <exec_depend>surveillance_system_pipeline</exec_depend>
  <exec_depend>surveillance_system_param_manager</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>