<?xml version="1.0"?>
<package format="2">
  <name>surveillance_system_diagnostics</name>
  <version>0.1.0</version>
  <description>Diagnostics node for the Surveillance System</description>
  <maintainer email="kmj@taltech.ee">kmj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>surveillance_system_msgs</build_depend>
  <build_depend>surveillance_system_common</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>surveillance_system_msgs</build_export_depend>
  <build_export_depend>surveillance_system_common</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>surveillance_system_msgs</exec_depend>
  <exec_depend>surveillance_system_common</exec_depend>

  <export>
  </export>
</package>