<?xml version="1.0"?>
<package format="2">
  <name>surveillance_system_motion_tracking</name>
  <version>0.1.0</version>
  <description>Motion tracking node for the Surveillance System</description>
  <maintainer email="kmj@taltech.ee">kmj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>surveillance_system_common</build_depend>
  <build_depend>message_filters</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>surveillance_system_common</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>surveillance_system_common</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
  </export>
</package>