<?xml version="1.0"?>
<package format="2">
  <name>surveillance_system_param_manager</name>
  <version>1.0.0</version>
  <description>Surveillance System Message Definitions</description>
  <maintainer email="kajaas@taltech.ee">Karl Marten Jaaska</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <export>
  </export>
</package>